Dependencies updates and respective code adjustments